tests/snapshots/convert__PatchFlag__dyn_class.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    "class": a
}, null, 2);

