tests/snapshots/convert__PatchFlag__dyn_prop.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    prop: a
}, null, 8, [
    "prop"
]);

