tests/snapshots/convert__PatchFlag__dyn_style.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    style: a
}, null, 4);

