tests/snapshots/convert__PatchFlag__need_patch.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    ref: fn
}, null, 512);

